# mcp_crawl_neo4j

./: README.md  crawled_pages.sql  git-push-solution.md  pyproject.toml
knowledge_graphs/: ai_hallucination_detector.py
src/: crawl4ai_mcp.py  crawl4ai_mcp_hallucination_report.json  utils.py  utils_hallucination_report.json
