[project]
name = "crawl4ai-mcp"
version = "0.1.0"
description = "MCP server for integrating web crawling and RAG into AI agents and AI coding assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai==0.6.2",
    "mcp==1.7.1",
    "sentence-transformers>=4.1.0",
    "neo4j>=5.28.1",
    "psycopg2-binary",
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.1.0",
]
